Prevent admin table header wrapping

--- a/client-admin/src/app/shared/components/admin-table/admin-table.component.scss
+++ b/client-admin/src/app/shared/components/admin-table/admin-table.component.scss
@@ -1,5 +1,6 @@
 ::ng-deep td{white-space:nowrap;}
+::ng-deep th{white-space:nowrap;}
 
 table{
-  background-color: #fff;
+  background-color: #fff;  
 }
